# winrar-installer

./: .gitignore  .gitmodules  README.md  app.py  app_cli.py  app_gui.py  build.py  cli.py  pyproject.toml  req
logic/: __init__.py  downloader.py  installation.py  path.py  version.py
windows/: __init__.py  about.py  mainwindow.py
