[project]
name = "winrar-installer"
version = "1.1.3"
description = "Installer of WinRAR for Windows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4.6",
    "imageio>=2.37.0",
    "pyside6>=6.9.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "elevate>=0.1.3",
    "pyinstaller>=6.14.1",
]
